# OpenGL_Tutorial

./: .gitignore  CMakeLists.txt  README.md  config.in
src/: glad.c
src/05_Vertex_Buffer_And_Vertex_Attribute/: CMakeLists.txt  main.cpp
src/07_Writing_A_Shader/: CMakeLists.txt  main.cpp
src/08_Dealing_A_Shader/: CMakeLists.txt  main.cpp
src/09_Index_Buffer/: CMakeLists.txt  main.cpp
src/09_Index_Buffer/res/: shader.txt
